@@ -10,7 +10,7 @@ module ActiveMerchant #:nodoc:
                                   'NL', 'NO', 'PL', 'PT', 'RO', 'SK', 'SI', 'ES', 'SE', 'CH']
 
       # The card types supported by the payment gateway
-      self.supported_cardtypes = [:visa, :master, :american_express, :discover, :diners_club, :solo] # :switch?
+      self.supported_cardtypes = [:visa, :master, :american_express, :discover, :diners_club]
 
       # The homepage URL of the gateway
       self.homepage_url = 'http://www.optimalpayments.com/'
@@ -320,8 +320,6 @@ module ActiveMerchant #:nodoc:
           'american_express'=> 'AM',
           'discover'        => 'DI',
           'diners_club'     => 'DC',
-          #'switch'          => '',
-          'solo'            => 'SO'
         }[key]
       end
 
