@@ -36,7 +36,7 @@ class PslCardTest < Test::Unit::TestCase
   end
   
   def test_supported_card_types
-    assert_equal [ :visa, :master, :american_express, :diners_club, :jcb, :switch, :solo, :maestro ], PslCardGateway.supported_cardtypes
+    assert_equal [ :visa, :master, :american_express, :diners_club, :jcb, :maestro ], PslCardGateway.supported_cardtypes
   end
   
   def test_avs_result
