@@ -10,6 +10,7 @@
 * Drop support for Laser cards [bpollack] #2983
 * Improve Maestro card detection [bpollack] #2983
 * Add ROU alpha3 code for Romania [dtykocki] #2989
+* [POSSIBLE BREAKAGE] Drop support for Solo and Switch cards [bpollack] #2991
 
 == Version 1.83.0 (August 30, 2018)
 * CT Payment: Update How Address is Passed [nfarve] #2960
